--- a/.github/workflows/hello-ci-cd.yml
+++ b/.github/workflows/hello-ci-cd.yml
@@ -1,4 +1,4 @@
-name ci-cd:
+name: ci-cd
 
 on:
   push:
@@ -10,5 +10,5 @@ jobs:
       runs-on: ubuntu-latest
       
       steps:
-        - name: Install
+        - name: Install 
           run: pip install pytest
